prusti-tests/tests/verify_overflow/fail/issues/issue-389-2.rs
fn foo() {}

fn bar(mut i: i32) {
    while {
        i += 1; //~ ERROR attempt to add with overflow
        i > 0
    } {
        foo();
    }
}

fn main() {}
